# workday_calendar

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cpp-ci.yml
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: commoncalendar.h  gregoriancalendar.h  simpledateformat.h  workdaycalendar.h
lib/src/: gregoriancalendar.cpp  workdaycalendar.cpp
tests/: CMakeLists.txt  gregoriancalendar.cpp  workdaycalendar.cpp
